2023-07-14T01:49:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5549611230 # 1021
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 20 56
* notice: prev accum: outdated-unq outdated-all / unq all: 372 663 / 410 718
* notice: next accum: outdated-unq outdated-all / unq all: 372 663 / 411 720
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2023-06-30 2023-07-13]

2023-07-13T08:22:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5540777819 # 1019
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 19 55
* notice: prev accum: outdated-unq outdated-all / unq all: 371 662 / 408 715
* notice: next accum: outdated-unq outdated-all / unq all: 372 663 / 410 718
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-06-29] / [2023-07-13]

2023-07-13T01:50:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5538197882 # 1018
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 19 53
* notice: prev accum: outdated-unq outdated-all / unq all: 370 660 / 408 715
* notice: next accum: outdated-unq outdated-all / unq all: 371 662 / 408 715
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-28] / []

2023-07-12T08:22:41Z: