@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-14T01:49:48Z",
+  "timestamp" : "2023-07-14T08:21:45Z",
   "count_outdated" : 663,
   "uniques_outdated" : 372,
-  "count" : 720,
-  "uniques" : 411,
+  "count" : 721,
+  "uniques" : 412,
   "clones" : [
     {
       "timestamp": "2023-06-30T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
