@@ -1,5 +1,5 @@
 {
-  "count": 56,
+  "count": 57,
   "uniques": 20,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
